adds bootstrap css file

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="/vendor/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
 	<script data-main="main.js" src="vendor/requirejs.js"></script>
 </head>
 <body>
