finish index page

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,11 @@
 		<div class="ls-navbar-child">
 		</div>
 	</div>
-	<div class="ls-content"></div>
+	<div class="ls-content">
+		<div class="ls-content-child">
+			
+		</div>
+	</div>
 
 </body>
 </html>
