adds basics types

--- a/client/index.html
+++ b/client/index.html
@@ -3,18 +3,19 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" href="/vendor/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
-	<script data-main="main.js" src="vendor/requirejs.js"></script>
+
 </head>
 <body>
+
 	<div class="ls-navbar">
 		<div class="ls-navbar-child">
 		</div>
 	</div>
 	<div class="ls-content">
 		<div class="ls-content-child">
-			
+
 		</div>
 	</div>
-
+ <script src="./build/bundle.js"></script>
 </body>
 </html>
