--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,6 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" href="/vendor/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
-
 </head>
 <body>
 
@@ -16,6 +14,6 @@
 
 		</div>
 	</div>
- <script src="./build/bundle.js"></script>
+ <script src="bundle.js"></script>
 </body>
 </html>
